<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragment.LibraryFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tab_library"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".01" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias=".02"
        app:layout_constraintWidth_percent=".92">

        <EditText
            android:id="@+id/library_edtSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_search"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/t_m_ki_m_nhanh"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:paddingStart="20dp"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary"
            android:textSize="14sp"
            tools:ignore="Autofill,ContentDescription,RtlSymmetry,EditableContentDescCheck" />

        <ImageView
            android:id="@+id/library_ic_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:paddingEnd="20dp"
            android:src="@drawable/ic_seach"
            android:tint="@color/primary"
            tools:ignore="ContentDescription,RtlSymmetry,UseAppTint" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/th_vi_n_c_a_b_n"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias=".01"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias=".02"
        app:layout_constraintWidth_percent=".92"
        tools:ignore="UselessLeaf">

        <androidx.cardview.widget.CardView
            android:id="@+id/library_add_library"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:background="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/library_recyclerView_library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/l_ch_s_g_n_nh_t"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias=".01"
        tools:ignore="RtlHardcoded" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/library_recyclerView_story"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintWidth_percent=".92" />

</androidx.constraintlayout.widget.ConstraintLayout>